# Otus-architect-hw2

./: CMakeLists.txt  README.md  test.cpp
.github/workflows/: cmake.yml
